--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.4",
     "jest-environment-jsdom": "^29.7.0",
     "next": "14.2.5",
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.12"
+    "react-hook-form": "^7.52.2",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
