--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.4",
     "jest-environment-jsdom": "^29.7.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-loading-skeleton": "^3.4.0",
+    "react-responsive-modal": "^6.4.2",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
     "yup": "^1.4.0"
@@ -30,6 +34,7 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
