--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@react-input/mask": "^1.2.5",
     "axios": "^1.7.4",
     "jest-environment-jsdom": "^29.7.0",
     "lodash": "^4.17.21",
@@ -24,9 +25,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-loading-skeleton": "^3.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-responsive-modal": "^6.4.2",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
+    "validation-br": "^1.4.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
