--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "test:watch": "jest --watchAll",
     "cypress:open": "cypress open"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@react-input/mask": "^1.2.5",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.4",
     "jest-environment-jsdom": "^29.7.0",
     "lodash": "^4.17.21",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
